# face_identify

./: README.md  convert.ipynb  web.py
FaceIdentify_CPP/: CMakeLists.txt  README.md  embedding_db.db
FaceIdentify_CPP/app/: People.hpp  draw.hpp  loging.hpp  main.cpp  stream.hpp
FaceIdentify_CPP/etc/: camera_and_models.conf  test.conf
FaceIdentify_CPP/src/: utils.cpp
FaceIdentify_CPP/src/camera/: camera.hpp  internal_camera.cpp  internal_camera.hpp  rtsp_camera.cpp  rtsp_camera.hpp
FaceIdentify_CPP/src/config/: camera_config.cpp  camera_config.hpp  models_config.cpp  models_config.hpp
FaceIdentify_CPP/src/embedding/: embedding_db.hpp  embedding_db_impl.hpp  face_embedding.cpp  face_embedding.hpp  utils.hpp
FaceIdentify_CPP/src/mtcnn/: detector.cpp  detector.hpp  onet.cpp  pnet.cpp  rnet.cpp
FaceIdentify_CPP/webconsole/: index.html  root.js  styles.css
FaceIdentify_TFlite/: NhiThuy_identify.tflite  face_detect_test.ipynb  facenet_tflite.py  model_path.py  mtcnn_tflite.py  utils.py
FaceIdentify_TFlite/facenet_tflite_model/: onet_20180402-114759.tflite  pnet_20180402-114759.tflite  rnet_20180402-114759.tflite
ZigBeeDoorLocker/src/: main.cpp
template/: index.html
